Improve flat array copying test.